@@ -285,3 +285,5 @@
 20031016 compat/Makefile.am: distribute getopt.h.
 20031016 event.c, debugger/debugger.h: must explicitly include glib.h as
 	 it is no longer pulled in by libspectrum.
+20031020 fuse.c, trdos.c, utils.c: use libspectrum_identify_file_with_class
+	 where appropriate.
